# fdk-rdf-postman

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: concept-deployment.yaml  concept-service.yaml  data-service-deployment.yaml  data-service-service.yaml  dataset-deployment.yaml  dataset-service.yaml  kustomization.yaml
deploy/demo/: concept-deployment.yaml  dataset-deployment.yaml  dataset-service.yaml  deployment.yaml
deploy/prod/: concept-deployment.yaml  dataset-deployment.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/staging/: concept-deployment.yaml  dataset-deployment.yaml  deployment.yaml  kustomization.yaml  service.yaml
kafka/: create_schemas.sh  create_topics.sh
kafka/schemas/: no.fdk.concept.ConceptEvent.json  no.fdk.dataservice.DataServiceEvent.json  no.fdk.dataset.DatasetEvent.json
src/: diff_store.rs  error.rs  kafka.rs  lib.rs  metrics.rs  schemas.rs
tests/: integration_tests.rs  kafka_utils.rs
