[package]
name = "fdk-rdf-postman"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
avro-rs = "0.13.0"
futures = "0.3.24"
lazy_static = "1.4.0"
prometheus = "0.13.2"
rdkafka = "0.28.0"
reqwest = "0.11.12"
schema_registry_converter = { version = "2.1.0", features = ["avro", "futures", "rustls_tls"], default-features=false }
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.37"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.11", features = ["json"] }

[dev-dependencies]
httptest = "0.15.4"
