[package]
name = "fdk-rdf-postman"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
apache-avro = "0.14.0"
futures = "0.3.28"
lazy_static = "1.4.0"
prometheus = "0.13.2"
rdkafka = "0.29.0"
reqwest = "0.11.16"
schema_registry_converter = { version = "3.1.0", features = ["avro", "futures", "rustls_tls"], default-features=false }
serde = "1.0.160"
serde_derive = "1.0.137"
thiserror = "1.0.49"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.11", features = ["json"] }

[dev-dependencies]
httptest = "0.15.4"
